[package]
name = "online-pong"
version = "0.1.0"
edition = "2021"
authors = [ "let" ]

[dependencies]
let-engine = { path = "../let-engine/let-engine", default-features = false, features = [ "networking", "physics" ] }
serde = "1.0.203"

[features]
default = [] # "client" ]

client = [ "let-engine/client", "let-engine/audio" ]
